# sf2565-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arnoldi.jl  main.cpp  test_matrix.txt
matrices/: dense_convection_diffusion_10.txt  dense_convection_diffusion_100.txt  random_matrix_10.txt  random_matrix_100.txt  random_matrix_1000.txt  sparse_convection_diffusion_1000.txt  sparse_convection_diffusion_10000.txt  sparse_random_10.txt  sparse_random_100.txt  sparse_random_1000.txt  sparse_random_10000.txt
src/: arnoldi.h  io.h  lanczos.cpp  lanczos.h  main.cpp  main_sparse.cpp  matrix_gen.py
